Fix wrapping for all browsers

--- a/addons/wrtv_config_relaunch_v2/static/src/css/wrtv_relaunch_2.css
+++ b/addons/wrtv_config_relaunch_v2/static/src/css/wrtv_relaunch_2.css
@@ -394,6 +394,6 @@ select {
 
 /* Survey buttons should word-wrap and break words on tiny screens */
 .js_surveyform button[type=submit] {
-  text-wrap: wrap;
+  white-space: break-spaces;
   word-break: break-word;
 }
